added simple endpoints to http server
